Progress bar box now doesnt have inline css, but css in classes still neeeds to be formatted

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="ui-layout">
-        <div class="ui-side-menu">
+        <div class="ui-sidebar">
             <div class="ui-logo-box">
                 <img class="ui-logo-small" src="img/Group.png">
                 <p class="ui-logo-label">Smart Network</p>
@@ -78,34 +78,34 @@
                             <p>JUNE UTILIZATION</p>
                             <p>LIMIT: 35 GB</p>
                         </div>
-                        <div class="meter" style="display: flex; align-items:center">
-                            <span style="width: 55%; text-align: right;"><p style="margin-right: 10px">14.1 GB</p>  </span>
-                            <div style="height: 30px; width: 3px; background: black"></div>
+                        <div class="ui-meter ui-progress-bar-big">
+                            <span><p>14.1 GB</p>  </span>
+                            <div></div>
                         </div>
                     </div>
                     <div class="ui-speed">
                         <div class="ui-flex">
                             <img src="damjan">
                             <p>21.4 Mb/s</p>
-                            <div class="meter damjan" style="display:flex;overflow: hidden; border: 1px solid #e8e4e4; width: 140px">
-                                <span class="progress" style="width: 80%;background:transparent;display:flex;align-items:center;font-size: 9px; font-weight: 600; color: #8b8b8b">
-                                <p style="position:relative; left: 43px">1</p>
-                                <p style="position:relative; left: 84px">5</p>
-                                <p style="position:relative; left: 117px">20</p>
-                            </span>
-                                <span class="novidiv" style="background: white; width: 20%;position: initial;border-radius: unset"></span>
+                            <div class="ui-meter ui-gradient-green ui-progress-bar-small">
+                                <span class="ui-progress-number">
+                                    <p>1</p>
+                                    <p>5</p>
+                                    <p>20</p>
+                                    </span>
+                                <span class="ui-progress-background"></span>
                             </div>
                         </div>
                         <div class="ui-flex">
                             <img src="damjan">
                             <p>21.4 Mb/s</p>
-                            <div class="meter damjan" style="display:flex;overflow: hidden; border: 1px solid #e8e4e4; width: 140px">
-                                <span class="progress" style="border-top-right-radius: 8px;width: 80%;background:transparent;display:flex;align-items:center;font-size: 9px; font-weight: 600; color: #8b8b8b">
-                                <p style="position:relative; left: 43px">1</p>
-                                <p style="position:relative; left: 84px">5</p>
-                                <p style="position:relative; left: 117px">20</p>
-                            </span>
-                                <span class="novidiv" style="background: white; width: 20%;position: initial;border-radius: unset"></span>
+                            <div class="ui-meter ui-gradient-green ui-progress-bar-small">
+                                <span class="ui-progress-number">
+                                    <p>1</p>
+                                    <p>5</p>
+                                    <p>20</p>
+                                    </span>
+                                <span class="ui-progress-background"></span>
                             </div>
                         </div>
                     </div>
