Renaming and menu links

--- a/networks.html
+++ b/networks.html
@@ -13,8 +13,8 @@
                 <p class="ui-logo-label">Smart Network</p>
             </div>
             <div class="ui-vertical-menu ui-menu-spacing">
-                <a href="#" class="active"><img src="img/Shape-3.png">Subscribers</a>
-                <a href="#"><img src="img/Shape-4.png">Networks</a>
+                <a href="subscribers.html"><img src="img/Shape-3.png">Subscribers</a>
+                <a href="networks.html" class="active"><img src="img/Shape-4.png">Networks</a>
                 <a href="#"><img src="img/Shape-5.png">ISP Plans</a>
                 <a href="#"><img src="img/Shape-1.png">Script Library</a>
                 <a href="#"><img src="img/Shape-2.png">Task Manager</a>
